# pi-bluetooth

./: .gitignore  Bluetooth_Client.c  Bluetooth_Server.c  CMakeLists.txt  README.md
client/: Bluetooth_Client.c  CMakeLists.txt
serveur/: Bluetooth_Server.c  CMakeLists.txt  syncAndStartGDB.sh
